--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,13 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
-          android:padding="10dp"
+          android:paddingStart="10dp"
+          android:paddingEnd="10dp"
+          android:paddingTop="10dp"
+          android:paddingBottom="30dp"
           >
+
+
 
          <TextView
 
